--- a/default.yaml
+++ b/default.yaml
@@ -11,5 +11,8 @@ tarballs:
   "mdocml.zip":
     url: https://embedeo.org/ws/doc/man_windows/mdocml-1.13.1-win32-embedeo-02.zip
     sha1: 3024816df0e66393f54542b81c06af137f8f5f24
+  "cert.pem":
+    url: https://curl.haxx.se/ca/cacert.pem
+    sha1: 1057b838cf913c5e188e6ec6697b6f2b49637c29
 ver: 2.7.1p83
 release: 4
